--- a/VeterinarioSW/ControlDeVeterinaria/templates/ControlDeVeterinaria/log.html
+++ b/VeterinarioSW/ControlDeVeterinaria/templates/ControlDeVeterinaria/log.html
@@ -17,21 +17,25 @@ body {
 </style>
   </head>
   <body>
-
+    {% if form.errors %}
+    <p> Hay un error revisa </p>
+    {% endif %}
+    {%if next %}
+    <p> Hey tu no puedes entrar ahi </p>
+    {% endif %}
     <div class="login-box">
       <img src="{% static "CDV/images/logo2.png" %}" class="avatar" alt="Avatar Image">
       <h1>Iniciar sesión</h1>
-      <form>
+      <form method="post" action="{% url 'login' %}">
+       {% csrf_token %}
         <div class="name">
       <label for="name"></label>
-    </div>
-        <input type="text" placeholder="Nombre de Usaurio">
-        
-        <div class="name">
-      <label for="name"></label>
-      <input type="password" placeholder="Contraseña" name="name" id="name_input" required>
-    </div>
-        <input type="submit" value="Ingresar">
+        <h4>Usuario: </h4>
+        {{ form.username }}
+        <h4>Contraseña: </h4>
+        {{ form.password }}
+      <input type="submit" value="Ingresar">
+      <input type="hidden" name="next" value="{{ next }}">
       </form>
     </div>
   </body>
