--- a/VeterinarioSW/ControlDeVeterinaria/templates/ControlDeVeterinaria/base.html
+++ b/VeterinarioSW/ControlDeVeterinaria/templates/ControlDeVeterinaria/base.html
@@ -54,7 +54,7 @@ body {
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{% url 'crear-cita' %}">Ver/Crear/Eliminar Cita</a>
-              <a class="dropdown-item" href="#">Calendario</a>
+              <a class="dropdown-item" href="{% url 'calendario' 2021 %}">Calendario</a>
             </div>
           </li>
           <li class="nav-item dropdown">
